--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -11,6 +11,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="@drawable/background"
         android:orientation="vertical">
 
         <TextView
@@ -18,7 +19,8 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical|center"
             android:text="@string/welcome"
-            android:textSize="@dimen/txt_56"
+            android:textColor="@color/colorWelcome"
+            android:textSize="20dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintHorizontal_bias="0.527"
             app:layout_constraintLeft_toLeftOf="parent"
@@ -31,8 +33,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical|center"
-            android:layout_marginTop="@dimen/padding_200"
-            android:text="@string/login" />
+            android:layout_marginTop="40px"
+            android:text="@string/login"
+            android:textColor="@color/colorWelcome" />
 
     </LinearLayout>
 
