--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,20 +9,16 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:background="@drawable/background"
+        android:orientation="vertical"
+        app:layout_constraintBottom_toBottomOf="parent">
 
         <TextView
-            android:layout_width="wrap_content"
+            android:layout_width="400dp"
             android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical|center"
             android:text="@string/welcome"
-            android:textSize="@dimen/txt_56"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintHorizontal_bias="0.527"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.074" />
+            android:textColor="@color/colorWelcome"
+            android:textSize="20dp" />
 
         <Button
             android:id="@+id/button3"
@@ -30,7 +26,8 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical|center"
             android:layout_marginTop="@dimen/padding_200"
-            android:text="@string/login" />
+            android:text="@string/login"
+            android:textColor="@color/colorWelcome" />
 
     </LinearLayout>
 </android.support.constraint.ConstraintLayout>
