se agrego soporte para multiples layout y se arreglo la distribuciion

--- a/app/src/main/res/layout-xlarge/activity_main.xml
+++ b/app/src/main/res/layout-xlarge/activity_main.xml
@@ -10,10 +10,10 @@
     <TextView
 
         android:id="@+id/client_id_input_layout"
-        android:layout_width="100dp"
+        android:layout_width="500dp"
         android:layout_height="wrap_content"
         android:text="@string/welcome"
-        android:textSize="@dimen/txt_56"
+        android:textSize="@dimen/padding_200"
         app:layout_constraintBottom_toTopOf="@+id/authenticate"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
@@ -27,6 +27,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:text="@string/login"
+        android:textSize="50dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="@id/client_id_input_layout"
         app:layout_constraintRight_toRightOf="@id/client_id_input_layout"
